# roc.rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
examples/: benchmark.py  roc_test.py
python/: __init__.py
roc_metrics/: Cargo.toml
roc_metrics/src/: main.rs  roc_metrics.rs
src/: lib.rs  roc_metrics.rs
tests/: test_roc_rs.py
