[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "roc_rs"
version = "0.1.0"
description = "A fast ROC metrics calculator implemented in Rust"
authors = [{name = "Allen Wang", email = "allencwang@google.com"}]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "roc_rs"